added --update just to be consistent for -U

--- a/acxi.1
+++ b/acxi.1
@@ -324,7 +324,7 @@ Test your configurations without actually doing the copy and sync
 operations. Activates \fB \-\-full\fR as well for more complete output.
 
 .TP
-.B \-U\fR
+.B \-U\fR, \fB\-\-update\fR
 Self updater, will update acxi and its man page. Non GNU/LInux 
 will probably require changing the default values, which are set 
 in \fBUSER VARIABLES\fR for curl, acxi and man page acxi.1. 
