fixed --test in man as well

--- a/acxi.1
+++ b/acxi.1
@@ -354,8 +354,9 @@ Path to the top-most directory containing your source files (eg, flac).
 
 .TP
 .B \-\-test\fR
-Test your configurations without actually doing the copy and sync 
-operations. Activates \fB \-\-full\fR as well for more complete output.
+Test your configurations, copy, sync, checksum, and tagging actions 
+without actually doing the operations. Activates \fB \-\-full\fR 
+as well for more complete output.
 
 .TP
 .B \-U\fR, \fB\-\-update\fR
