added unset option to --exclude

--- a/acxi.1
+++ b/acxi.1
@@ -297,6 +297,9 @@ If it's a path to a file of excludes, use one exclude string per line.
 Sample: \fB\-\-exclude='artwork^^Daisy Queen^^Bon Jovi'\fR
 Sample: \fB\-\-exclude='/home/me/music/excludes/acxi-excludes-phone.txt\fR
 
+If you want to temporarily suspend exclude actions one time, use: 
+\fB\-\-exclude='unset'\fR
+
 .TP
 .B \-\-exclude\-append [items]\fR, \fB\-X [items]\fR
 Append an item to the list of excludes or file. Only accepts string values,
