added docs for --alt-ag extension use.

--- a/acxi.1
+++ b/acxi.1
@@ -106,10 +106,12 @@ deep directory or it won't work.
 
 .TP
 .B \-\-alt\-ag [file name]\fR
-When used with \fB\-\-aggregate\fR, will aggregate the file name given 
-instead of the default \fBauto.tag\fR file name.
+When used with \fB\-\-aggregate\fR, will aggregate the file name or
+extension given instead of the default \fBauto.tag\fR file name.
 
 Sample: \fBacxi \-\-aggregate \-\-alt\-ag info.txt \-s my\-music -d music\-data\fR
+
+Sample: \fBacxi \-\-aggregate \-\-alt\-ag jpg \-s my\-music -d music\-data\fR
 
 .TP
 .B \-\-append [extensions]\fR, \fB\-a [extensions]\fR
