--- a/acxi.1
+++ b/acxi.1
@@ -369,6 +369,9 @@ Input type. Supported types: flac, wav, raw, shn.
 unless you can find a package for it. Use \fB\-\-log 3\fR to test the 
 first time to make sure you have shorten codec installed.
 
+Some other input types may be active for testing purposes occasionally,
+but acxi does not promote, advocate, or officially support those (like mp3).
+
 .TP
 .B \-\-log [0-4]\fR
 Dynamically set LOG_LEVEL. Helps for debugging certain types of issues
