tweaked man wording

--- a/acxi.1
+++ b/acxi.1
@@ -370,7 +370,8 @@ unless you can find a package for it. Use \fB\-\-log 3\fR to test the
 first time to make sure you have shorten codec installed.
 
 Some other input types may be active for testing purposes occasionally,
-but acxi does not promote, advocate, or officially support those (like mp3).
+but acxi does not promote, advocate, or officially support those types
+(like mp3 to flac).
 
 .TP
 .B \-\-log [0-4]\fR
