--- a/acxi.1
+++ b/acxi.1
@@ -620,7 +620,7 @@ occur in any other context in your music collection files.
 
 \fBTAG_FILE\fR \- Sample: \fBTAG_FILE=autotags.tag\fR 
 
-\fBauto.tag\fR \- Thes filename to be used to autotag. Default is \fBauto.tag\fR.
+\fBauto.tag\fR \- The filename to be used to autotag. Default is \fBauto.tag\fR.
 Filename must be unique, and not be found anywhere else in your collection. Do
 not change unless you have a very good reason to.
 
