--- a/acxi.1
+++ b/acxi.1
@@ -1,4 +1,4 @@
-.TH ACXI 1 "2019\-11\-25" acxi "acxi manual"
+.TH ACXI 1 "2019\-12\-24" acxi "acxi manual"
 .SH NAME
 acxi  \- Command line audio conversion tool
 .SH SYNOPSIS
@@ -14,7 +14,7 @@ Syncing: \fBacxi\fR [\fB\-a\fR extensions] [\fB\-\-clean\fR]
 Tagging: \fBacxi\fR [\fB\-\-autotag\fR] [\fB\-\-autotag\-create\fR] 
 [\fB\-\-autotag\-create\-single\fR] 
 [\fB\-\-autotag\-create\-multi {filename start ID}\fR]
-[\fB\-\-aggregate {file name|extension}\fR] 
+[\fB\-\-aggregate {file name|extension}\fR] [\fB\-\-image {cover image filename}\fR]
 [\fB\-\-no\-replaygain\fR] [\fB\-\-remove\-images\fR]
 .IP * 2
 Checksums: \fBacxi\fR [\fB\-\-checksum\fR] [\fB\-\-checksum\-delete\fR] 
@@ -358,6 +358,23 @@ conversion tools for flac, mp3, ogg, or opus output. Same as \fB\-\-log 3\fR
 .TP
 .B \-\-help\fR, \fB\-h\fR
 This help menu.
+
+.TP
+.B \-\-image [cover image file name]\fR
+Flac only. Use only on a single directory. Takes the supplied cover image
+file and embeds it into the existing flac files. Use with \fB\-\-remove-images\fR 
+if you want to remove existing embedded images. If this option is not used, it 
+will not add images to the file if images are found in it (image embedding is 
+cumulative in FLAC files). 
+
+Do not use if you are using an \fBauto.tag\fR file, thise is is intended
+only to add an image to an already tagged .flac file without retagging it.
+
+Only use \fB.png\fR or \fB.jpg\fR image types, otherwise the results may be 
+inconsistent. If you use the value '\fBremove\fR' all embedded images and 
+their padding will be removed.
+
+Only run this in a single recording directory, do not use globally!!
 
 .TP
 .B \-\-input [flac|raw|shn|wav]\fR, \fB\-i [flac|raw|shn|wav]\fR
