Added -R shortcut for --remove-images

--- a/acxi.1
+++ b/acxi.1
@@ -1,4 +1,4 @@
-.TH ACXI 1 "2019\-12\-28" acxi "acxi manual"
+.TH ACXI 1 "2019\-12\-29" acxi "acxi manual"
 .SH NAME
 acxi  \- Command line audio conversion tool
 .SH SYNOPSIS
@@ -478,7 +478,7 @@ Turns off all screen output, except for error messages.
 Same as \fB\-\-log 0\fR
 
 .TP
-.B \-\-remove\-images\fR
+.B \-\-remove\-images\fR, \fB\-R\fR
 Use with \fB\-\-autotag\fR. Will remove all embedded image data, and the
 associated padding, prior to tagging (and adding new image if applicable)
 audio file. Note that simply removing image data will leave the padding
